--- a/assets/styles/toc-mobile.css
+++ b/assets/styles/toc-mobile.css
@@ -187,13 +187,14 @@
     display: block;
     border: 4px solid #bababa;
     width: 79vw;
-    margin-top:1rem;
+    margin-top:2rem;
     /* height:100px; */
   }
   .table-content {
     display: flex;
     align-items: center;
     gap: 0.5rem;
+    margin-bottom: 1rem;
   }
   .table-content-1 {
     color: #ffffff !important;
